src/objects/Allergy__c.object
<CustomObject>
    <description>Allergy to medication, used primarily with DoseSpot integration</description>
    <fields>
        <fullName>Allergy_ID__c</fullName>
        <description>For use with DoseSpot - DoseSpot’s unique patient allergy identifier</description>
        <externalId>true</externalId>
        <label>Allergy ID</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Code_Type__c</fullName>
        <description>For use with DoseSpot - Identifies if the Code is a drug or allergy class</description>
        <label>Code Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <description>Drug or allergy class identifier</description>
        <label>Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_DoseSpot__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes that the allergy was manually added (not found through a search of DoseSpot&apos;s medication/allergy set)</description>
        <label>No DoseSpot (added manually)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Onset_Date__c</fullName>
        <description>For use with DoseSpot - Date the allergy or adverse reaction was first
observed</description>
        <label>Onset Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Onset_Date_simple__c</fullName>
        <description>For use on the Patient Check In (Medical History) form. DoseSpot API requires a datetime value for Onset Date, but we want to take in only a date on the form, so we use this value to take the date on the form and convert it to the Onset_Date__c datetime required by the API.</description>
        <label>Onset Date (simple)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Patient</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Allergies</relationshipLabel>
        <relationshipName>Allergies</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reaction_Type__c</fullName>
        <description>For use with DoseSpot - Identifies the reaction as a reaction or an
adverse reaction</description>
        <label>Reaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Allergy</fullName>
                </value>
                <value>
                    <fullName>AdverseReaction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reaction__c</fullName>
        <description>For use with DoseSpot - Description of the patient’s reaction to the
allergen</description>
        <label>Reaction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RxCUI__c</fullName>
        <description>For use with DoseSpot - RxNorm drug identifier</description>
        <label>RxCUI</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>For use with DoseSpot - Identifies the status of the allergy</description>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Allergy</label>
    <nameField>
        <label>Allergy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Allergies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>